work/216/Chain_C/compile_stderr_1.txt
source_1.c: In function ‘main’:
source_1.c:7:1: error: expected ‘;’ before ‘}’ token
 }
 ^
